# Heligoland

./: .gitignore  .gitmodules  CMakeLists.txt  Changelist.txt  Heligoland.manifest  LICENSE.txt  README.md  heligoland.desktop.in  icon.icns  icon.rc  run_cmake.sh  tag.sh
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  release.yml
include/: AIController.h  Audio.h  Game.h  Player.h  Renderer.h  Shell.h  Ship.h  Turret.h  Vec2.h
installer/linux/: build_deb.sh
installer/macos/: build_pkg.sh
installer/windows/: heligoland.iss
scripts/: generate_sounds.py
src/: AIController.cpp  AIController.h  Audio.cpp  Audio.h  Config.cpp  Config.h  FileSystemWatcher.cpp  FileSystemWatcher.h  Game.cpp  Game.h  Island.cpp  Island.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shell.cpp  Shell.h  Ship.cpp  Ship.h  Turret.cpp  Turret.h  Vec2.h  WinMain.cpp  main.cpp
